# 2d-ik

./: .gitignore  .python_version  CLAUDE.md  README.md  datamodel.py  demo.py  fabrik.py  numeric.py  numeric_jax.py  numeric_sympy.py  numeric_torch.py  pyproject.toml  requirements.txt  symbolic.py  symbolic_grad.py  test_datamodel.py  test_symbolic_ik.py  test_timing.py  visualization.py
sympy-stubs/: __init__.pyi
tests/: test_angle_constraints.py  test_datamodel.py  test_numeric_jax.py  test_symbolic_ik.py  test_timing.py
